[gd_scene load_steps=4 format=3 uid="uid://dsotjep87sau4"]

[ext_resource type="Script" path="res://Scripts/MainNode.gd" id="1_4lgbp"]
[ext_resource type="PackedScene" uid="uid://d4chixre3rvi5" path="res://Subwindows/Box.tscn" id="2_71puv"]

[sub_resource type="Theme" id="Theme_8vexb"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1100.0
offset_bottom = 700.0
theme = SubResource("Theme_8vexb")
script = ExtResource("1_4lgbp")

[node name="Box" parent="." instance=ExtResource("2_71puv")]
layout_mode = 0
offset_left = 286.0
offset_top = 48.0
offset_right = 286.0
offset_bottom = 48.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1100.0
offset_bottom = 40.0

[node name="MenuBar" type="MenuBar" parent="Panel"]
layout_mode = 0
offset_right = 1100.0
offset_bottom = 40.0

[node name="Container" type="HBoxContainer" parent="Panel/MenuBar"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 324.0
offset_bottom = 36.0

[node name="File" type="MenuButton" parent="Panel/MenuBar/Container"]
layout_mode = 2
text = "File"
flat = false
item_count = 8
popup/item_0/text = "New File"
popup/item_0/id = 6
popup/item_1/text = "Open File"
popup/item_1/id = 1
popup/item_2/text = "Save File"
popup/item_2/id = 2
popup/item_3/text = "Close File"
popup/item_3/id = 7
popup/item_4/id = 4
popup/item_4/separator = true
popup/item_5/text = "Settings"
popup/item_5/id = 3
popup/item_6/id = 4
popup/item_6/separator = true
popup/item_7/text = "Exit"
popup/item_7/id = 5

[node name="GoTo" type="Button" parent="Panel/MenuBar/Container"]
layout_mode = 2
focus_mode = 0
text = "Go to"

[node name="Search" type="Button" parent="Panel/MenuBar/Container"]
layout_mode = 2
focus_mode = 0
text = "Search"

[node name="About" type="MenuButton" parent="Panel/MenuBar/Container"]
layout_mode = 2
text = "About"
flat = false
item_count = 4
popup/item_0/text = "Show String Info"
popup/item_1/text = "Set Author Details"
popup/item_1/id = 1
popup/item_2/id = 2
popup/item_2/separator = true
popup/item_3/text = "About DH..."
popup/item_3/id = 3

[node name="ReloadStyle" type="Button" parent="Panel/MenuBar/Container"]
layout_mode = 2
focus_mode = 0
text = "Reload Style"

[node name="DialogueEdit" type="TextEdit" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 283.0
offset_top = 530.0
offset_right = 870.0
offset_bottom = 688.0
focus_mode = 1
placeholder_text = "Put your Dialogue text here to try it out."

[node name="EnablePortrait" type="CheckBox" parent="DialogueEdit"]
layout_mode = 0
offset_top = -39.0
offset_right = 149.0
offset_bottom = -8.0
focus_mode = 0
text = "Enable portrait"

[node name="ReplaceSimilar" type="CheckBox" parent="DialogueEdit"]
layout_mode = 0
offset_left = 353.0
offset_top = -41.0
offset_right = 585.0
offset_bottom = -10.0
focus_mode = 0
button_pressed = true
text = "Replace all similar entries"

[node name="AddEntry" type="Button" parent="DialogueEdit"]
layout_mode = 0
offset_left = 5.0
offset_top = -72.0
offset_right = 126.0
offset_bottom = -41.0
focus_mode = 0
text = "Add new Entry"

[node name="AddString" type="Button" parent="DialogueEdit"]
layout_mode = 0
offset_left = 449.0
offset_top = -72.0
offset_right = 574.0
offset_bottom = -41.0
focus_mode = 0
text = "Add new String"

[node name="DisplaySettings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -224.0
offset_top = 48.0
offset_right = -224.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="CurrentLayer" type="Label" parent="DisplaySettings"]
layout_mode = 0
offset_top = 5.0
offset_right = 88.0
offset_bottom = 28.0
text = "Text Layer:"

[node name="Num" type="SpinBox" parent="DisplaySettings/CurrentLayer"]
layout_mode = 0
offset_left = 134.0
offset_top = -5.0
offset_right = 217.063
offset_bottom = 26.0
focus_mode = 2
min_value = 1.0
value = 1.0
rounded = true
alignment = 2

[node name="CurrentBox" type="Label" parent="DisplaySettings"]
layout_mode = 0
offset_top = 52.0
offset_right = 40.0
offset_bottom = 75.0
text = "Box:"

[node name="Num" type="SpinBox" parent="DisplaySettings/CurrentBox"]
layout_mode = 0
offset_left = 134.0
offset_top = -3.0
offset_right = 217.063
offset_bottom = 28.0
focus_mode = 2
min_value = 1.0
value = 1.0
rounded = true
alignment = 2

[node name="Info" type="Label" parent="DisplaySettings/CurrentBox"]
layout_mode = 0
offset_left = -245.0
offset_top = -20.0
offset_right = 201.0
offset_bottom = -5.0
theme_override_font_sizes/font_size = 10
text = "OW"
horizontal_alignment = 2

[node name="CurrentFont" type="Label" parent="DisplaySettings"]
layout_mode = 0
offset_top = 101.0
offset_right = 40.0
offset_bottom = 124.0
focus_mode = 1
text = "Font:"

[node name="Num" type="SpinBox" parent="DisplaySettings/CurrentFont"]
layout_mode = 0
offset_left = 134.0
offset_top = -2.0
offset_right = 217.063
offset_bottom = 29.0
focus_mode = 2
min_value = 1.0
value = 1.0
rounded = true
alignment = 2

[node name="Info" type="Label" parent="DisplaySettings/CurrentFont"]
layout_mode = 0
offset_left = -208.0
offset_top = -19.0
offset_right = 201.0
offset_bottom = -4.0
theme_override_font_sizes/font_size = 10
text = "Speech"
horizontal_alignment = 2

[node name="CurrentScale" type="Label" parent="DisplaySettings"]
layout_mode = 0
offset_top = 147.0
offset_right = 45.0
offset_bottom = 170.0
text = "Scale:"

[node name="Num" type="SpinBox" parent="DisplaySettings/CurrentScale"]
layout_mode = 0
offset_left = 134.0
offset_top = -5.0
offset_right = 217.063
offset_bottom = 26.0
focus_mode = 2
step = 0.01
value = 1.0
alignment = 2
custom_arrow_step = 0.01

[node name="CurrentColor" type="Label" parent="DisplaySettings"]
layout_mode = 0
offset_top = 190.0
offset_right = 93.0
offset_bottom = 213.0
text = "Layer Color:"

[node name="Picker" type="ColorPickerButton" parent="DisplaySettings/CurrentColor"]
layout_mode = 0
offset_left = 169.0
offset_top = -3.0
offset_right = 201.0
offset_bottom = 28.0
focus_mode = 0
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="EntrySearch" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 276.0
offset_bottom = 79.0
placeholder_text = "Search an entry."

[node name="EntryList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 86.0
offset_right = 276.0
offset_bottom = 688.0
allow_reselect = true

[node name="StringSelector" type="Label" parent="."]
layout_mode = 0
offset_left = 881.0
offset_top = 497.0
offset_right = 994.0
offset_bottom = 520.0
text = "Select a string:"

[node name="ItemList" type="ItemList" parent="StringSelector"]
layout_mode = 0
offset_left = 1.0
offset_top = 34.0
offset_right = 208.0
offset_bottom = 191.0
allow_reselect = true

[node name="SimilarEntries" type="Label" parent="."]
layout_mode = 0
offset_left = 879.0
offset_top = 281.0
offset_right = 1045.0
offset_bottom = 304.0
text = "Similar String entries:"

[node name="ItemList" type="ItemList" parent="SimilarEntries"]
layout_mode = 0
offset_left = 2.0
offset_top = 33.0
offset_right = 208.0
offset_bottom = 210.0

[connection signal="pressed" from="Panel/MenuBar/Container/GoTo" to="." method="open_go_to_menu"]
[connection signal="pressed" from="Panel/MenuBar/Container/Search" to="." method="open_search_menu"]
[connection signal="pressed" from="Panel/MenuBar/Container/ReloadStyle" to="." method="_on_reload_style_pressed"]
[connection signal="text_changed" from="DialogueEdit" to="." method="_on_dialogue_edit_text_changed"]
[connection signal="pressed" from="DialogueEdit/AddEntry" to="." method="_on_add_entry_pressed"]
[connection signal="pressed" from="DialogueEdit/AddString" to="." method="_on_add_string_pressed"]
[connection signal="text_changed" from="EntrySearch" to="." method="entry_search_text_changed"]
[connection signal="item_selected" from="EntryList" to="." method="_on_item_list_item_selected"]
[connection signal="item_selected" from="StringSelector/ItemList" to="." method="_on_item_list_item_selected_str"]
[connection signal="item_selected" from="SimilarEntries/ItemList" to="." method="_on_item_list_item_selected_similar"]
